--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-query-parser": "^1.3.3",
     "formidable": "^2.0.1",
     "fs-extra": "^10.1.0",
     "handlebars": "^4.7.7",
