--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "quick-sftp",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon index.js",
+    "start": "node index.ts",
+    "start:dev": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,6 +27,18 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/express-serve-static-core": "^4.17.30",
+    "@types/formidable": "^2.0.5",
+    "@types/fs-extra": "^9.0.13",
+    "@types/passport": "^1.0.10",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
+    "@types/qs": "^6.9.7",
+    "@types/serve-static": "^1.15.0",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
