--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node index.ts",
-    "start:dev": "nodemon index.ts",
+    "build": "npx tsc -p ./tsconfig.json",
+    "buildStart": "npm run build && npm run start",
+    "start": "node dist/index.js",
+    "start:dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
