--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "npx tsc -p ./tsconfig.json",
-    "buildStart": "npm run build && npm run start",
+    "buildStart": "yarn build && yarn start",
     "start": "node dist/index.js",
     "start:dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
